src/components/Layout/reset.css
* {
	box-sizing: border-box;
	margin: 0;
}

html,
body,
#___gatsby,
#___gatsby > div {
	height: 100%;
	margin: 0;
	min-height: 100%;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	tab-size: 4;
}

#___gatsby > div {
	display: flex;
	flex-direction: column;
	align-items: stretch;
}

a {
	text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
hr {
	margin: 0;
	padding: 0;
}

p {
	text-align: justify;
}

img {
	max-width: 100%;
}

pre {
	overflow-x: auto;
	overflow-y: hidden;
}

